<resources>
    <string name="v2_0_0">v2.3.38</string>
    <string name="app_name">Ecom SATHi</string>
    <string name="ok">OK</string>
    <string name="msg_link">MESSAGE LINK</string>
    <string name="link_payment">Payment Link</string>
    <string name="rsnd_link">SEND LINK</string>
    <string name="txt_heading">Send Payment Link</string>
    <string name="monthly_working_hours">Monthly working hours</string>
    <string name="google_maps_key">AIzaSyD-2RwUpbboPmUM-cwV0TEvN86uf1px8QY</string>
    <string name="copyright_txt"><![CDATA[All copyrights are reserved by <font color=\'#C02222\'> Ecom</font><font color=\'#333E86\'> Express</font> Ltd. @2023 ]]></string>
    <string name="enter_mobile_no">Enter Mobile No Manually</string>
    <string name="no_verify">Verifying your number</string>
    <string name="sent_otp_to">We have sent an SMS with an activation code to your registered mobile no. </string>
    <string name="change_no_stmt">We will sent an SMS with an activation code on your given mobile no. </string>
    <string name="notverified">Not Verified </string>
    <string name="cash_recive_from_consignee">How much have you received from consignee?</string>
    <string name="collected_amount_hint">Enter Collected Amount</string>
    <string name="return_amount_str">"The amount that you need to return is: \u20B9"</string>
    <string name="min_amount_str">"The Min amount need to collect is: \u20B9"</string>
    <string name="resheduled_amount">"The Rescheduled amount to be collected is: \u20B9"</string>
    <string name="error_min_amount">"The amount that you had entered is less than minimum amount."</string>
    <string name="round_off_amount_str">"The Round off amount is:  "</string>
    <string name="error_collected_amount">"The amount that you had entered is less than collectable amount."</string>
    <string name="inst">*Instructions</string>
    <string name="Y">Yes</string>
    <string name="N">No</string>
    <string name="alert_title">Alert.</string>
    <string name="reassign_alert">Do you want to revert all changes.</string>
    <string name="hint_employee_code">Employee Code</string>
    <string name="hint_password">Password*</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="change_password">Change Password</string>
    <string name="text_login">LOGIN</string>
    <string name="invalid_confirm_password">Confirm And New Password Not Match</string>
    <string name="change_pass">CHANGE PASSWORD</string>
    <string name="unattempted_shipment_title">Unattempted Shipments</string>
    <string name="unattempted_shipment_msg">You have unattempted shipments, do you want to attempt these shipments in future? </string>
    <string name="confirm_password">Confirm New Password*</string>
    <string name="hint_old_password">Old Password*</string>
    <string name="rvp">RVP</string>
    <string name="shipment_undelivered">Shipment Undelivered</string>
    <string name="Successful">Successful</string>
    <string name="fuel_reimbursement">Fuel Reimbursement</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hint_new_password">New Password*</string>
    <string name="hint_confirm_password">Confirm Password*</string>
    <string name="hint_otp">Enter OTP*</string>
    <string name="hint_emp_code">Enter Employee Code</string>
    <string name="send_button">SEND</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="home">HOME</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="reset">Reset</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_new_password">New Password*</string>
    <string name="attendance">Attendance</string>
    <string name="consignee_name">Consignee Name</string>
    <string name="awb">AWB:</string>
    <string name="item">Item:</string>
    <string name="capture_image_bf_pkg">Capture Image Of The Product Before Packaging</string>
    <string name="capture_first_image_bf_pkg">Capture First Image Of The Product Before Packaging</string>
    <string name="capture_second_image_bf_pkg">Capture Second Image Of The Product Before Packaging</string>
    <string name="capture_image_af_pkg">Capture Image Of Completely Sealed Flyer With Product Clearly Visible Inside</string>
    <string name="scan_awb_bf_pkg">Scan RVP AWB On Packaging Slip</string>
    <string name="scan_awb_af_pkg">Scan The Barcode On The Packaging</string>
    <string name="eds_scan_awb_bf_pkg">Scan EDS AWB On Packaging Slip</string>
    <string name="eds_scan_awb_af_pkg">Scan Packaging Envelope Barcode</string>
    <string name="amount">Amount:</string>
    <string name="address">Address:</string>
    <string name="office">Office</string>
    <string name="residence">Residence</string>
    <string name="cod">COD</string>
    <string name="other">Other</string>
    <string name="enter_the_collected_amount">Collected Amount</string>
    <string name="returning_amount">Returning Amount:</string>
    <string name="round_off">Round off Amount:</string>
    <string name="next">NEXT</string>
    <string name="cancel">CANCEL</string>
    <string name="pay_by_card">Digital Payment</string>
    <string name="check_ecod_status">eCOD STATUS</string>
    <string name="raise_dispute">RAISE DISPUTE</string>
    <string name="enter_the_otp">Enter OTP</string>
    <string name="_dlight_enter_the_otp">Enter 4 Digit OTP</string>
    <string name="verify">VERIFY</string>
    <string name="resend">RESEND</string>
    <string name="change_mobile_no">Change Mobile No.</string>
    <string name="resend_otp">Resend</string>
    <string name="sent_otp_to_other">Other Number</string>
    <string name="eds_activity_list">Task List</string>
    <string name="start_trip_reading_should_be_less_than_999999">Start Trip Reading Should Be Less Than 999999</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_valid_otp">Enter valid Otp</string>
    <string name="start_trip">Start Trip</string>
    <string name="pathshaala">E-Pathshaala</string>
    <string name="all_fields_are_mandatory">All Fields Are Mandatory</string>
    <string name="please_enter_user_id">Enter Employee Code</string>
    <string name="clear_cache_msg">Cache is empty now</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="stop_trip">Stop Trip</string>
    <string name="pay_by_cash">Cash</string>
    <string name="capture_image">Capture image</string>
    <string name="capture_image_two">Capture Image*</string>
    <string name="capture_image_rts">Capture Image*</string>
    <string name="scan_bar_code"> Scan Barcode</string>
    <string name="masking_front">Capture Front Image</string>
    <string name="masking_rear">Capture Rear Image</string>
    <string name="signature">Signature</string>
    <string name="signature_mandatory">Signature*</string>
    <string name="choose_reason">Choose Reason*</string>
    <string name="choose_group">Choose Group*</string>
    <string name="reschedule">Reschedule Date</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="please_enter_new_password_and_confirm_password"> Enter New Password and Confirm Password</string>
    <string name="please_enter_the_amount_given_by_consignee"> Enter The Amount</string>
    <string name="otp_blank">Enter OTP</string>
    <string name="Invalid_otp_entered">Enter Valid OTP </string>
    <string name="Invalid_pin_entered">Enter Valid PIN </string>
    <string name="Invalid_urn_entered">Enter Valid URN</string>
    <string name="Invalid_adhaar_entered"> Check Aadhaar no. Should be 12 digit…</string>
    <string name="otp_resend_successfully">OTP Resend Successfully!</string>
    <string name="ref_resend_successfully">Ref. No. Resend Successfully!</string>
    <string name="payment_option"> Select Payment Mode</string>
    <string name="delivered_to">Delivered To*</string>
    <string name="picked_from">Pick From</string>
    <string name="pick_up_address">Pick up Address</string>
    <string name="DelieveryAddress">Delivery Address*</string>
    <string name="less_amount_entered">Entered amount cannot be less than collectable amount</string>
    <string name="more_amount_entered">Cannot enter amount more than 2,00,000</string>
    <string name="enter_input">Input Amount</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="ppd">PPD</string>
    <string name="data">data</string>
    <string name="alert">Don\'t click photograph of consignee it is an offence.</string>
    <string name="shipment_status_done">Shipment Already Attempted</string>
    <string name="undelivered_shipment_msg">Call Duration below specified limit, Would you like to Dial Again?</string>
    <string name="permission_required">Provide All Permissions</string>
    <string name="please_read_and_sign_confirming_to_the_receipt_declaration_as_under"> Read and sign confirming to the receipt declaration as under</string>
    <string name="please_select_deliverd_to">Select Delivered To</string>
    <string name="start_your_trip">Start Your Trip</string>
    <string name="login_error">Employee Code or Password cannot be empty!</string>
    <string name="please_fill_undelivered_details_below">Fill Undelivered Details Below</string>
    <string name="please_fill_failed_details_below"> Fill Failed Details Below</string>
    <string name="pick_dates">Pick Date</string>
    <string name="select_reason_code">Select Reason</string>
    <string name="reschedule_statment">Select Reschedule Date And Slot</string>
    <string name="please_fill_all_details">Fill All The Details</string>
    <string name="please_capture_image">Capture Image</string>
    <string name="cannot_go_back">Cannot go back!! Go forward to commit packet</string>
    <string name="cannot_go_back_Rvp">Cannot go back!!</string>
    <string name="cancel_alert">Do you want to cancel?</string>
    <string name="commit_restriction_msg">Your Device Date-Time Is Incorrect, Press OK For Update.</string>
    <string-array name="veh_type">
        <item>Self</item>
        <item>Ecom Express</item>
    </string-array>
    <string-array name="time">
        <item>Now</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>1 hour</item>
        <item>2 hour</item>
        <item>3 hour</item>
        <item>4 hour</item>
    </string-array>
    <string name="remarks">Remarks</string>
    <string name="Success">Success</string>
    <string name="now_you_can_handover_this_shipment_from_customer">Now you can handover this shipment to customer.</string>
    <string name="Name">Name</string>
    <string name="provide_flyer_code_here">Provide Flyer Code</string>
    <string name="enter_flyer_code">Enter Flyer code</string>
    <string name="retake">Retake</string>
    <string name="upload">Upload</string>
    <string name="is_your_selfie_image_clear">Is your selfie image clear?</string>
    <string name="please_make_sure_the_image_is_clear_and_your_face_is_visible">Please make sure the image is clear and your face is visible</string>
    <string name="rts_success">RTS Shipment Complete</string>
    <string name="select_one_of_the_callbridge_option">Please Select Call Bridge Number</string>
    <string name="call_primary_number">Call Primary Number</string>
    <string name="call_alternate_number">Call Alternate Number</string>
    <string name="sms_on_alternate_number">SMS on Alternate Number</string>
    <string name="please_ensure_the_product_is_clearly_visible_inside_the_flyer_for_proper_verification">Please ensure the product is clearly visible inside the flyer for proper verification</string>
    <string name="is_product_image_clear">Is product image clear?</string>
</resources>