<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20DP"
        android:background="@drawable/bg_curve_corner">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bottomSheetHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/is_product_image_clear"
            android:textColor="@color/black_1A"
            android:textSize="@dimen/_21SP"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/instructionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/please_ensure_the_product_is_clearly_visible_inside_the_flyer_for_proper_verification"
            android:textColor="@color/black_1A"
            android:textSize="@dimen/_18SP"
            android:layout_marginTop="@dimen/_20DP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottomSheetHeading" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retake"
            android:layout_width="@dimen/_0DP"
            android:layout_height="@dimen/_60DP"
            android:textColor="@color/blue_8F"
            android:textSize="@dimen/_21SP"
            android:text="@string/retake"
            app:backgroundTint="@null"
            android:layout_marginEnd="@dimen/_8DP"
            android:layout_marginTop="@dimen/_25DP"
            android:fontFamily="@font/roboto_bold"
            android:background="@drawable/blue_border_button"
            app:layout_constraintTop_toBottomOf="@id/instructionText"
            app:layout_constraintEnd_toStartOf="@id/btn_upload"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload"
            android:layout_width="@dimen/_0DP"
            android:layout_height="@dimen/_60DP"
            android:textColor="@color/white"
            android:textSize="@dimen/_21SP"
            android:text="@string/upload"
            app:backgroundTint="@null"
            android:layout_marginTop="@dimen/_25DP"
            android:layout_marginStart="@dimen/_8DP"
            android:fontFamily="@font/roboto_bold"
            android:backgroundTint="@color/blue_8F"
            android:background="@drawable/bg_curve_corner"
            app:layout_constraintTop_toBottomOf="@id/instructionText"
            app:layout_constraintStart_toEndOf="@id/btn_retake"
            app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>