<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5DP"
        app:cardElevation="@dimen/_25DP"
        android:layout_margin="@dimen/_10DP"
        android:background="@drawable/rounded_background">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/manualDialogHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:padding="@dimen/_10DP"
            android:text="@string/provide_flyer_code_here"
            android:textColor="@color/white"
            android:textSize="@dimen/_15SP"
            android:gravity="center"
            android:background="@color/rts"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_20DP"
            android:layout_marginStart="@dimen/_20DP"
            android:layout_marginEnd="@dimen/_10DP"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
            android:hint="@string/enter_flyer_code"
            android:inputType="textCapCharacters"
            android:textColorHint="@color/gray"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/manualDialogHeading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/flyer_image" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/flyer_image"
            android:layout_width="@dimen/_30DP"
            android:layout_height="@dimen/_30DP"
            android:src="@drawable/cam"
            android:layout_marginEnd="@dimen/_20DP"
            android:layout_marginTop="@dimen/_20DP"
            app:layout_constraintTop_toBottomOf="@id/manualDialogHeading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/edt_num" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20DP"
            android:background="@drawable/rts_button"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:textSize="@dimen/_15SP"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintTop_toBottomOf="@id/edt_num"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>